problems with latest pyinstaller

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,8 @@ build_script:
   - cmd: conda install -y mycelyso mycelyso-inspector
   # there seems to be an old version around
   - cmd: conda update -y pyasn1
+  # problems with certain versions in conjunction with pyinstaller
+  - cmd: conda install -y scipy==0.19.1 pandas==0.20.3
   # ... then install the git version. if deps would be missing pip would now try to get'em
   - cmd: python setup.py install
   # this is the starter, full of implicit exports to steer pyinstaller into the right direction
@@ -33,6 +35,8 @@ build_script:
   - cmd: echo from tunable.schema import tunable_schema as schema, ASN1_SCHEMA_VERSION >> runmycelyso.py
   - cmd: echo import molyso >> runmycelyso.py
   - cmd: echo import pywt._extensions._cwt >> runmycelyso.py
+  - cmd: echo import scipy >> runmycelyso.py
+  - cmd: echo import pandas >> runmycelyso.py
   - cmd: echo from mycelyso.__main__ import main >> runmycelyso.py
   - cmd: "echo if __name__ == '__main__': >> runmycelyso.py"
   - cmd: "echo     multiprocessing.freeze_support() >> runmycelyso.py"
