--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,9 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
+  - "3.7"
 
-# Adapted from https://conda.io/docs/user-guide/tasks/use-conda-with-travis-ci.html
-install:
-  - sudo apt-get update
-  # We do this conditionally because it saves us some downloading if the version is the same.
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  ##
-  - conda config --add channels conda-forge
-  - conda config --add channels bioconda
-  - conda config --add channels csachs
-  ##
-  - conda update -q conda
-  # Useful for debugging any issues with conda
-  - conda info -a
-  # Installing the pre-packaged mycelyso packages installs all necessary dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION mycelyso mycelyso-inspector
-  - conda install -q -n test-environment -c conda-forge numpy scipy  # why doesnt update all not update numpy?
-  - source activate test-environment
-  # Last, we install the current pulled source over it
-  - python setup.py install
+install: "pip install ."
 
 script: python -m mycelyso.test
+
