--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ before_build:
 
 build_script:
   # first install the latest version, that fetches all deps
-  - cmd: conda install -y mycelyso mycelyso-inspector
+  - cmd: conda install -y python==3.7 mycelyso mycelyso-inspector
   # there seems to be an old version around
   - cmd: conda update -y pyasn1
   # problems with certain versions in conjunction with pyinstaller
